crates/sverb-tui/src/app/snapshots/sverb_tui__app__sync_tests__t01_local_only_settings.snap
---
source: crates/sverb-tui/src/app/sync_tests.rs
expression: screen
---
 sverb ─ Personal ▾ ────────────────────────────────────────────────────────────────────────────────
┌──────────────┐ no sessions · ^\ o quick connect · ^\ v views/sessions                             
│  Hosts       │┌ Settings ────────────────────────────────────────────────────────────────────────┐
│  Keychain    ││Sync                                                                              │
│  Forwards    ││                                                                                  │
│  Snippets    ││Not connected · Connect to a server                                               │
│  Known       ││                                                                                  │
│  Logs        ││[Enter] Log in to a server   [n] Create an account                                │
│▸ Settings    ││                                                                                  │
│              ││sverb works fully offline. Nothing is sent anywhere until you connect a server.   │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
└──────────────┘└──────────────────────────────────────────────────────────────────────────────────┘
 NORMAL                                                                          ^\ ? help · q quit
