crates/sverb-tui/src/app/snapshots/sverb_tui__app__sync_tests__t02_sync_page.snap
---
source: crates/sverb-tui/src/app/sync_tests.rs
expression: screen
---
 sverb ─ Personal ▾ ───────────────────────────────────────────────────────────────────────── error 
┌──────────────┐ no sessions · ^\ o quick connect · ^\ v views/sessions                             
│  Hosts       │┌ Settings ────────────────────────────────────────────────────────────────────────┐
│  Keychain    ││Sync · Devices · Team · Vaults                                                    │
│  Forwards    ││                                                                                  │
│  Snippets    ││Status      error                                                                 │
│  Known       ││Server      https://sync.example.test                                             │
│  Logs        ││Account     me@example.test                                                       │
│▸ Settings    ││Last sync   2026-10-08 12:00                                                      │
│              ││Pending     Personal: 3                                                           │
│              ││Errors      1 item too large to upload                                            │
│              ││                                                                                  │
│              ││[s] Sync now   [d] Disconnect                                                     │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
└──────────────┘└──────────────────────────────────────────────────────────────────────────────────┘
 NORMAL  │ error                                                                 ^\ ? help · q quit
