crates/sverb-tui/src/app/snapshots/sverb_tui__app__sync_tests__t02_top_bar_offline.snap
---
source: crates/sverb-tui/src/app/sync_tests.rs
expression: top
---
 sverb ─ Personal ▾ ─────────────────────────────────────────────────────────── offline (3 pending)
