crates/sverb-tui/src/app/snapshots/sverb_tui__app__sync_tests__t05_devices_page.snap
---
source: crates/sverb-tui/src/app/sync_tests.rs
expression: screen
---
 sverb ─ Personal ▾ ────────────────────────────────────────────────────────────────────── ⟳ synced 
┌──────────────┐ no sessions · ^\ o quick connect · ^\ v views/sessions                             
│  Hosts       │┌ Settings ────────────────────────────────────────────────────────────────────────┐
│  Keychain    ││Sync · Devices · Team                                                             │
│  Forwards    ││                                                                                  │
│  Snippets    ││› laptop              linux     created 2026-10-08 12:00  seen -  this device     │
│  Known       ││  phone               linux     created 2026-10-08 12:00  seen -                  │
│  Logs        ││                                                                                  │
│▸ Settings    ││[x] Revoke   [r] Reload                                                           │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
└──────────────┘└──────────────────────────────────────────────────────────────────────────────────┘
 NORMAL  │ ⟳ synced                                                              ^\ ? help · q quit
