crates/sverb-tui/src/app/snapshots/sverb_tui__app__sync_tests__t08_team_page.snap
---
source: crates/sverb-tui/src/app/sync_tests.rs
expression: screen
---
 sverb ─ Personal ▾ ────────────────────────────────────────────────────────────────────────────────
┌──────────────┐ no sessions · ^\ o quick connect · ^\ v views/sessions                             
│  Hosts       │┌ Settings ────────────────────────────────────────────────────────────────────────┐
│  Keychain    ││Sync · Devices · Team                                                             │
│  Forwards    ││                                                                                  │
│  Snippets    ││Org  Acme  (you: owner)                                                           │
│  Known       ││                                                                                  │
│  Logs        ││› owner  me@example.test                                                          │
│▸ Settings    ││                                                                                  │
│              ││[i] Invite   [p/d] Promote/demote   [l] Audit log   [x] Remove/leave   [v] Verify │
│              ││keys                                                                              │
│              ││[c] New org   [a] Accept invite   [r] Reload                                      │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
│              ││                                                                                  │
└──────────────┘└──────────────────────────────────────────────────────────────────────────────────┘
 NORMAL                                                                          ^\ ? help · q quit
